Fixed arrow z-index

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -265,7 +265,7 @@ button:focus {
 }
 
 .menu {
-  z-index: 1;
+  z-index: 2;
   width: 100%;
   height: 100%;
   position: absolute;
